align-items center for container to correct the height

--- a/css/flexbox-cards.css
+++ b/css/flexbox-cards.css
@@ -21,7 +21,7 @@ a {
     margin: 0 auto;
     /* TODO: Make this a flex container and align it's items to the center*/
     display: flex;
-    align-content: center;
+    align-items: center;
 }
 
 .card {
